--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
     <title>칭찬서비스: Complimate</title>
 
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
+    />
+
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="apple-touch-icon" href="/apple-icon-180.png" />
     <link rel="icon" type="image/png" sizes="196x196" href="/favicon-196.png" />
